--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,8 +23,12 @@ const { title } = Astro.props
       name="description"
       content="This site is a demo of an Astro SPA using Astro 3 with the experimental support for the View Transitions API and persistent islands."
     />
-    <title>{title}</title>
-    <ViewTransitions />
+	<title>{title}</title>
+	<style>
+	@view-transition {
+	    navigation: auto;
+	}
+    </style>
   </head>
   <body
     class="bg-white text-gray-600 work-sans leading-normal text-base tracking-normal overflow-hidden"
